# step-vsthost

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Source/: ArcController.cpp  AudioEngine.cpp  AudioEngine.h  HostedInstrumentRack.cpp  HostedInstrumentRack.h  MonomeConnection.cpp  MonomeConnection.h  MonomeController.cpp  MonomeFileBrowserActions.cpp  MonomeFileBrowserActions.h  MonomeFilterActions.cpp  MonomeFilterActions.h  MonomeGroupAssignActions.cpp  MonomeGroupAssignActions.h  MonomeMixActions.cpp  MonomeMixActions.h  PlayheadSpeedQuantizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetStore.cpp  PresetStore.h  StepHostEditor.cpp  StepHostEditor.h  StepHostProcessor.cpp  StepHostProcessor.h  StepMonomeController.cpp  StepMonomeController.h  StepSampler.h  StepSequencerDisplay.h  StepSequencerEngine.cpp  StepSequencerEngine.h
scripts/: install_macos_plugins.sh  package_release_macos.sh  package_release_windows.ps1  sign_and_notarize_macos.sh
